--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Postgress-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<!--JPA Hibernate -->
+		<!-- <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-agroal</artifactId>
+			<version>5.4.10.Final</version>
+			<type>pom</type>
+		  </dependency> -->
+
 	<!--
 		 <dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +57,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
