--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,21 @@
 			<artifactId>json</artifactId>
 			<version>20231013</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version> <!-- ou a versão mais recente -->
+		</dependency>
 		 <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version> <!-- ou a versão mais recente disponível -->
+		</dependency>
 		<!-- Postgress-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
